# KuLive

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/dai/android/media/live/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Logger.h  RtmpClient_jni.cpp  native-lib.cpp  rtmp_client.cpp  rtmp_client.h  rtmp_client_jni.cpp
app/src/main/cpp/log/: Logger.h
app/src/main/cpp/rtmp/: CMakeLists.txt  IRtmpClient.h  impl_rtmp.cpp  impl_srs_rtmp.cpp
app/src/main/cpp/rtmp/librtmp/: CMakeLists.txt
app/src/main/cpp/rtmp/srs-librtmp/: CMakeLists.txt  srs_librtmp.cpp
app/src/main/cpp/srs-librtmp/: .gitignore  Makefile  demo-test.cc  srs_librtmp.cpp
app/src/main/java/dai/android/media/live/: AVType.java  MainActivity.kt  MediaConfig.kt  Package.kt
app/src/main/java/dai/android/media/live/input/: AbstractConfig.kt  AbstractEncoder.kt  AudioEncoder.kt  IEncodeData.kt  InAPackage.kt  InVPackage.kt  VideoEncoder.kt
app/src/main/java/dai/android/media/live/output/: AbstractLive.java  AudioPackage.java  OutAPackage.kt  OutVPackage.kt  Package.java  RtmpPublisher.java  VideoPackage.kt
app/src/main/java/dai/android/media/live/rtmp/: FlvMeta.kt  FlvRaw.kt  FrameRateMeter.kt  IFLVRawCollect.kt  IRtmpCallback.kt  Packet.kt  RtmpClient.java  RtmpClient.kt  RtmpEmitter.java
app/src/main/java/dai/android/media/live/rtmp2/: FlvMeta.kt  FlvRaw.kt  FrameRateMeter.kt  IFLVRawCollect.kt  Packet.kt  RtmpClient.kt  RtmpEmitter.java
app/src/main/java/dai/android/media/live/scene/screen/: ScreenLive.java  ScreenService.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/test/java/dai/android/media/live/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
